app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .dark-outline {
    -webkit-text-stroke: 1.2px #e7e6e2;
    -webkit-text-fill-color: rgba(255, 255, 255, 0.2);
  }

  .dark-button {
    outline: solid 1px #c0ccbb;
    color: #c0ccbb;
  }

  .dark-button:hover {
    background-color: #c0ccbb;
    color: #0d2c32;
  }

  .dark-button::before{
    background-color: #c0ccbb;
  }
}





body {
  background-color: #E7E6E2;
  color: #0D2C32;
  box-sizing: border-box;
}

.container {
  width: 100%;
  max-width: 1200px;
  padding-right: 30px;
  padding-left: 30px;
  margin-right: auto;
  margin-left: auto;
}


.row {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;

  flex-wrap: nowrap;



}

nav {
  position: fixed;
  width: 100%;
  z-index: 999;
  color: #0d2c32;
  background-color: #E7E6E2;
}

.logo {
  z-index: 3;
}

/*  */



.navbar .nav-toggle-btn {
  background: none;
  border: none;
  outline: none;
  position: absolute;
  top: 24px;
  right: 24px;
  display: none;
  z-index: 2;
}

@media only screen and (max-width: 768px) {
  .navbar {

    flex-direction: column;
    align-items: flex-start;
  }

  .navbar .nav-toggle-btn {
    cursor: pointer;
    display: block;
  }

  .navbar .nav-links {
    width: 100%;
    display: flex;
    position: absolute;
    top: -100%;
    left: 0;
    opacity: 0;
    transition: all 0.5s, background-color 0s;
    margin: 4.5rem 0;
    z-index: 1;

  }

  .navbar .nav-links.active {
    top: 0;
    opacity: 1;
    transition: all 0.5s, background-color 0s;

    align-content: center;
  }

  .navbar .nav-links ul {
    flex-direction: column;
    width: 100%;
  }

  .navbar .nav-links li {
    text-align: center;
    padding: 0.5rem 0;
  }
}
/*  */




.button {
  display: inline-block;
  outline: solid 1px #17515C;
  outline-offset: -1px;
  border-radius: 50px;
  padding: 10px 15px;
  color: #17515C;
  transition: all .3s;
  position: relative;
  overflow: hidden;
  z-index: 1;
}

.button::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  z-index: -2;
}

.button::before {
  content: '';
  position: absolute;
  bottom: 0;
  left: -1px;
  width: 0%;
  height: 100%;
  background-color: #17515c;
  transition: all .3s;

  z-index: -1;
}

.button:hover {
  color: #e7e6e2;
}

.button:hover::before {
  width: 100%;
}



.button-email {
  padding-top: 50px;
}

.button-email a:hover {
  background-color: #17515C;
  color: #c0ccbb;
}

/* ===== [ GENERAL TEXTS ] ===== */

h1 {
  font-size: 80px;
  font-weight: 700;
  letter-spacing: 4px;
  color: #0D2C32;
  text-transform: uppercase;
}

h2 {
  font-size: 60px;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 4px;
  color: #0D2C32;
}

@media screen and (max-width: 767px) {
 h1 {
  font-size: 50px;
 }
 
  h2 {
    font-size: 38px;
  }

  h5 {
    font-size: 26px !important;
  }
}






h3 {
  font-size: 30px;
  font-weight: 700;
  color: #0D2C32;
}

h4 {
  font-size: 30px;
  font-weight: 700;
  line-height: 120%;
}

h5 {
  font-size: 40px;
  color: #17515c;
}


h6 {

  font-size: 16px;
  font-weight: 300;
  margin-top: 18px;
}

p {
  font-size: 15px;
  font-weight: 300;
  margin-top: 10px;
  color: #555555;
  line-height: 2;
}

.my-icon {
  font-size: 26px;
  line-height: 30px;
  color: #17515c;
}

/* ===== [ END GENERAL TEXTS ] ===== */

/* ===== [ LANDING ] ===== */

.blob {
  position: absolute;
  width: 500px;
  height: 500px;
  z-index: 2;
}

@media screen and (max-width: 767px) {
  .blob {
    position: absolute;
    width: 300px;
    height: 300px;
    z-index: 2;
  }
}

@media screen and (max-width: 767px) {
  .logo-hero {
    position: absolute;
    z-index: 3;
    width: 200px;
  }

  .logo-hero img {
    width: 200px;
    margin: 0 auto;
  }

}



.logo-hero {
  position: absolute;
  z-index: 3;
  width: 400px;
}

.mouse {
  width: 25px;
  height: 45px;
  border: 1px solid #0f0316;
  border-radius: 60px;
  position: absolute;
  bottom: 60px;

}

.mouse::before {
  content: '';
  width: 10px;
  height: 10px;
  position: absolute;
  top: 10px;
  left: 50%;
  transform: translateX(-50%);
  background-color: #333;
  border-radius: 50%;
  opacity: 1;
  animation: wheel 2s infinite;
  -webkit-animation: wheel 2s infinite;
}

@keyframes wheel {
  to {
    opacity: 0;
    top: 30px;
  }
}

@-webkit-keyframes wheel {
  to {
    opacity: 0;
    top: 30px;
  }
}

.showcase-section {
  box-shadow: 0px 50px 100px 0px rgba(0, 0, 0, 0.10);

}

.showcase-section .slide {
  display: flex !important;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.showcase-section .top {
  z-index: 5;
  -webkit-text-stroke: 1.2px #0d2c32;
  -webkit-text-fill-color: rgba(13, 44, 50, 0.1);
}

.showcase-nav {
  position: absolute;
  /* bottom: 40px; */
  left: 0;
  width: 100%;
  z-index: 8;
}


.showcase-nav .item {
  position: absolute;
  width: auto;
  height: auto;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.showcase-nav .item span {
  font-weight: 500;
  font-size: 12px;
}

/* remove default arrow */
.showcase-nav .item:after {
  display: none;
}


/* Intro title anim */
.animation {
  height:120px;
  overflow:hidden;
}

.animation > div > h2 {
  
  height:120px;
  /* margin-bottom: 2.81rem; */
  display:inline-block;

}

.animation div:first-child {
  animation: text-animation 8s infinite;
}

@keyframes text-animation {
  0% {margin-top: 0;}
  10% {margin-top: 0;}
  20% {margin-top: -7.5rem;}
  30% {margin-top: -7.5rem;}
  40% {margin-top: -15rem;}
  60% {margin-top: -15rem;}
  70% {margin-top: -7.5rem;}
  80% {margin-top: -7.5rem;}
  90% {margin-top: 0;}
  100% {margin-top: 0;}
}






.projects img,
.projects .cover {
  border-radius: 10px;
  height: 420px;
  width: 100%;
  object-fit: cover;
}
/* ... */

